--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://midhunwalker:preetha10@cluster0.2bwahae.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI="your_mongodb_database_path"
